fix: corrige afirmações desatualizadas sobre pinning e status da Structured Concurrency
O pinning de synchronized foi corrigido no Java 24 (JEP 491), e a
Structured Concurrency segue em preview no Java 25, não finalizada.
Ajusta o código do Joiner usado no exemplo pra bater com o texto.